Working async tasks for launch before install.